@@ -1,21 +1,23 @@
 Package: stampr
 Type: Package
-Title: stampr: Spatial Temporal Analysis of Moving Polygons in R
+Title: Spatial Temporal Analysis of Moving Polygons
 Version: 0.1
 Author: Jed Long and Colin Robertson
 Maintainer: Colin Robertson <crobertson@wlu.ca>
-Description: Perform spatial temporal analysis of moving polygons; a
-    longstanding analysis problem in GIS. The stampr package facilitates
-    directional analysis, shape analysis, and some other simple functionality
-    for examining spatial-temporal patterns of moving polygons.
+Description: Perform spatial temporal analysis of moving polygons; a longstanding analysis problem in Geographic Information Systems. Facilitates directional analysis, shape analysis, and some other simple functionality for examining spatial-temporal patterns of moving polygons.
+Depends:
+    R (>= 2.10)
 License: GPL-3
 Imports:
     sp,
     rgeos,
+    raster,
     rgdal,
     maptools,
     deldir,
-    tripack,
-    spdep
-Packaged: 2015-07-02 11:48:03 UTC; jed long
-RoxygenNote: 5.0.0
+    spdep,
+    grDevices,
+    methods
+Suggests:
+    igraph
+RoxygenNote: 5.0.1
