@@ -10,9 +10,12 @@ export(stamp.multichange)
 export(stamp.shape)
 export(stamp.stgroup.summary)
 import(deldir)
+import(grDevices)
 import(maptools)
+import(methods)
+import(raster)
 import(rgdal)
 import(rgeos)
 import(sp)
 import(spdep)
-import(tripack)
+importFrom(stats,optim)
