@@ -1,17 +1,15 @@
 #' Forest Fire dataset
 #'
-#' A dataset containing forest fire polygons representing the movement of the XX forest fire from T1 (fire1) to T2 (fire2). The extent of the fire on T1 was xx ha across yy polygons. By T2 the fire extent has increased/decreased to xx ha across yy polygons.
+#' A dataset containing fake forest fire polygons representing the movement of the forest fire from T1 (fire1) to T2 (fire2). The data is provided purely for demonstration purposes.
 #' 
-#' The \code{fire1} and \code{fire2} datases contains polygons that were derived from XX imagery... more info. the dataset. 
-#'
-#' @references
-#' Some References go here
 #'  
-#' @source To be written
+#'
+#'  
+#' @source Simulated data
 #'
 #' @docType data
-#' @keywords datasets
-#' @format \code{fire1} --- a \code{SpatialPolygonsDataFrame} with 33 records of of the location of forest fire. \code{fire2} a.. 
+#' @keywords datasets, testing
+#' @format \code{fire1} --- a \code{SpatialPolygonsDataFrame} with polygons representing the location of forest fire. 
 #' @name fire1
 #' @examples
 #' library(sp)
