@@ -4,6 +4,6 @@
 #'
 #' @docType data
 #' @keywords datasets
-#' @format \code{fire2} --- a \code{SpatialPolygonsDataFrame} with 33 records of of the location of forest fire.
+#' @format \code{fire2} --- a \code{SpatialPolygonsDataFrame} 
 #' @name fire2
 NULL
