@@ -1,21 +1,20 @@
 #' MPB dataset
 #'
-#' A dataset containing forest fire polygons representing the movement of the XX forest fire from T1 (fire1) to T2 (fire2). The extent of the fire on T1 was xx ha across yy polygons. By T2 the fire extent has increased/decreased to xx ha across yy polygons.
+#' A dataset containing polygons representing the location of mountain pine beetle hotspot polygons in Morice Forest District, British Columbia, Canada. 
 #' 
-#' The \code{mpb} dataset contains polygons that were derived from XX imagery... more info. the dataset. 
+#' These data were derived from helicopter-based GPS surveys during early years of large mountain pine beetle outbreak in Western Canada. 
 #'
 #' @references
-#' Some References go here
+#' Nelson TA, Boots B, Wulder MA, Carroll AL. Environmental characteristics of mountain pine beetle infestation hot spots. \emph{Journal of Ecosystems and Management}. 2007 Mar 14;8(1).
 #'  
-#' @source To be written
+#' @source Data obtained from Trisalyn Nelson (ASU)
 #'
 #' @docType data
 #' @keywords datasets
-#' @format \code{mpb} --- a \code{SpatialPolygonsDataFrame} with 33 records of of the location of forest fire. \code{fire2} a.. 
-#' @name fire1
+#' @format \code{mpb} --- a \code{SpatialPolygonsDataFrame} with 711 hotspot polygons that occured over eight years. The temporal indicator is the \code{TGROUP} column. Another variable \code{REGION} indicates whether the hotspot was in the northern or southern regions, which experienced mostly independent outbreaks. 
+#' @name mpb
 #' @examples
 #' library(sp)
 #' data(mpb)
-#' plot(mpb)
 #' plot(mpb,border=2,add=TRUE)
 NULL
