@@ -15,26 +15,33 @@
 #' @param changeByRow logical, whether or not each time period is a separate unique row of data (e.g., as per the \code{katrina} data)
 #' @param changeByField logical, whether or not time period data is given by a specific field. If this is TRUE, changeByRow should be false
 #' @param changeField string, name of the field which contains time period if changeByField is TRUE
-#' @param stampArgs list, list of paramater values to provide to the \code{stamp} function
+#' @param ... list of paramater values to provide to the \code{stamp} function
 #'
 #' @return
 #'  A \code{SpatialPolygonsDataFrame} which includes all outputs from the calls to the \code{stamp} function. If there are T time periods,
 #'  there will be T-1 time periods in the resulting \code{SpatialPolygonsDataFrame} object.
 #'
 #' @keywords stamp
+#' @examples
+#' library(sp)
+#' data("katrina")
+#' katrina$ID <- katrina$Id
+#' ch <- stamp.multichange(katrina, changeByRow = TRUE, dc = 0, distance = TRUE, direction = FALSE)
+#' STGroup <- stamp.stgroup.summary(ch)
+#' head(STGroup)
 #' @export
 
 #
 # ---- End of roxygen documentation ----
 
-stamp.multichange <- function(polys, changeByRow=TRUE, changeByField = FALSE, changeField="", stampArgs=list()) {
+stamp.multichange <- function(polys, changeByRow=TRUE, changeByField = FALSE, changeField="", ...) {
   outEvents <- list()
   lSum <- 1
   if(changeByRow==TRUE) {
     for(i in 1:(nrow(polys@data)-1)) {
       Ti <- polys[i,]
       Ti_1 <- polys[i+1,]
-      ch <- stamp(Ti, Ti_1, dc=stampArgs[[1]], direction=stampArgs[[2]], distance=stampArgs[[3]])
+      ch <- stamp(Ti, Ti_1, ...)
       xx1 <- spChFIDs(ch, paste(i, "-", as.character((lSum):(lSum+length(ch)-1)), sep=""))
       lSum <- length(ch) + lSum
       outEvents[[i]] <- xx1 #@data
@@ -45,7 +52,7 @@ stamp.multichange <- function(polys, changeByRow=TRUE, changeByField = FALSE, ch
     for(i in 1:(length(unique(polys@data[,changeField]))-1)) {
       Ti <- subset(polys, polys@data[,changeField] == unique(sort(polys@data[,changeField]))[i])
       Ti_1 <- subset(polys, polys@data[,changeField] == unique(sort(polys@data[,changeField]))[i+1])
-      ch <- stamp(Ti, Ti_1, dc=stampArgs[[1]], direction=stampArgs[[2]], dir.mode=stampArgs[[3]], ndir=stampArgs[[4]],  distance=stampArgs[[5]])
+      ch <- stamp(Ti, Ti_1, ...)
       xx1 <- spChFIDs(ch, paste(i, "-", as.character((lSum):(lSum+length(ch)-1)), sep=""))
       lSum <- length(ch) + lSum
       outEvents[[i]] <- xx1 #@data
