@@ -2,7 +2,7 @@
 # roxygen will use this file to create a NAMESPACE file.
 # Of importance is the @import command, as it lists package dependencies.
 
-#' stampr: Spatial Temporal Analysis of Moving Polygons in R
+#' stampr: Spatial Temporal Analysis of Moving Polygons
 #'
 #' The Package \code{stampr} provides tools for performing spatial temporal analysis of moving polygons.
 #' These tools allow the calculation of directional relationships, shape indices, and other basic
@@ -14,12 +14,13 @@
 #' geographic information science, but hopefully \code{stampr} can provide users with a
 #' platform for new developments and applied research looking at interesting geographical phenomena.
 #'
-#' @author Jed Long
+#' @author Jed Long and Colin Robertson
 #' @references
 #' Robertson, C., Nelson, T., Boots, B., and Wulder, M. (2007) STAMP: Spatial-temporal analysis of moving polygons.
 #'  \emph{Journal of Geographical Systems}, 9:207-227.
 #'
-#' @import sp rgeos maptools spdep rgdal tripack deldir
+#' @import sp rgeos maptools spdep rgdal deldir raster grDevices methods
+#' @importFrom stats optim
 #' @docType package
 #' @name stampr-package
 NULL
