@@ -4,7 +4,7 @@
 \name{fire2}
 \alias{fire2}
 \title{Forest Fire dataset}
-\format{\code{fire2} --- a \code{SpatialPolygonsDataFrame} with 33 records of of the location of forest fire.}
+\format{\code{fire2} --- a \code{SpatialPolygonsDataFrame}}
 \description{
 see fire1
 }
