@@ -4,8 +4,7 @@
 \alias{stamp}
 \title{Spatial temporal analysis of moving polygons}
 \usage{
-stamp(T1, T2, dc = 0, direction = FALSE, distance = FALSE,
-  shape = FALSE, ...)
+stamp(T1, T2, dc = 0, direction = FALSE, distance = FALSE, ...)
 }
 \arguments{
 \item{T1}{a \code{SpatialPolygonsDataFrame} object of polygons from time 1.}
